src/test/ui/cast/not_cenum_cast.stderr
error: cannot cast enum `E` into integer `u32` because it is not C-like
  --> $DIR/not_cenum_cast.rs:10:13
   |
LL |     let i = E::A() as u32;
   |             ^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/not_cenum_cast.rs:1:9
   |
LL | #![deny(not_cenum_cast)]
   |         ^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #88611 <https://github.com/rust-lang/rust/issues/88621>

error: aborting due to previous error

